--- a/desafiourbana-ui - Copia/package.json
+++ b/desafiourbana-ui - Copia/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng2-toasty": "^4.0.3",
+    "ngx-spinner": "^1.2.0",
     "primeng": "^4.1.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
